--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -412,10 +412,10 @@ URL = {http://www.esaim-m2an.org/article_S0764583X12000313},
 }
 
 @article{benzekry2014,
-  title={Classical Mathematical Models for Description and Prediction of Experimental Tumor Growth},
-  author={Benzekry, S. and Lamont, C. and Beheshti, A. and Tracz, A. and Ebos, J.M.L. and Hlatky, L. and Hahnfeldt, P.},
-  journal={arXiv preprint arXiv:1406.1446},
-  year={2014}
+  title={Classical mathematical models for description and prediction of experimental tumor growth},
+  author={Benzekry, S{\'e}bastien and Lamont, Clare and Beheshti, Afshin and Tracz, Amanda and Ebos, John ML and Hlatky, Lynn and Hahnfeldt, Philip},
+  year={2014},
+  journal={PLOS Computational Biology}
 }
 
 @article{jouganous2014,
