--- a/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
+++ b/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
@@ -544,7 +544,8 @@ $\GG^n=\GG(M^n,\W^n)$.
 \item Après cela, $\W^{n+1}$ est calculé à partir de~\eqref{eq_transport_pop}, à partir duquel on infère~$S^{n+1}$.
 \item On termine par le calcul de~$\xi^{n+1}$ et de~$M^{n+1}$ grâce à~\eqref{eq_xi}--\eqref{eq_M}.
 \end{myitemize}
-Présentons maintenant dans le détail, les schémas utilisés dans les simulations numériques.
+Présentons maintenant dans le détail, les schémas utilisés dans les simulations numériques. 
+Les aspects techniques concernant l'intégration de ces schémas dans un code de calcul C++, sont quant à eux fournis dans l'Annexe~\ref{chap:anx_img_complement}.
 
 \subsection{Calcul de la vitesse et de la pression} 
 
