--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -37,7 +37,9 @@ Enfin, je remercie tout particulièrement Vinciane pour sa bienveillance et son 
 Merci de la force et de la motivation que tu me donnes. 
 Merci de ta patience et de ta compréhension face à mes journées de travail qui se sont allongées et intensifiées durant la période de rédaction du présent manuscrit. 
 
-\subsection*{Financements / Funding}
+%%  ========= Financements ==============
+\newpage
+\section*{Financements / Funding}
 Ces travaux ont été financés par l'Université de Bordeaux. 
 Merci également à l'INRIA et au CNRS d'avoir financée plusieurs missions en France et à l'étranger.
 
