Refonte des graphiques presentant les histogrammes

--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -201,6 +201,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, corres
 \setlength{\largeurhisto}{0.24\textwidth}
 
 \begin{figure}[h!]
+\vspace{-5mm}
 \captionsetup[subfigure]{labelformat=simple, labelsep=colon}
 \renewcommand{\thesubfigure}{\arabic{subfigure}} %% Met des label en numeros (au lieu des lettres)
 \addtocounter{subfigure}{-1} %% Commence a 0
@@ -224,7 +225,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, corres
 \subfloat[Jour 1053]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_04_08_histo.png}}\ 
 \subfloat[Jour 1116]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_06_10_histo.png}}\ 
 \subfloat[Jour 1179]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_08_12_histo.png}}
-\caption{\label{fig:histo_dcm_Nber} Histogrammes cliniques de la tumeur de \Nber. }
+\caption{\label{fig:histo_dcm_Nber} Histogrammes cliniques de la tumeur de \Nber. \\ $c,\sigma$ et $w$: valeur des paramètres des mélanges bi-gaussiens; \# : Nombre d'éléments dans l'histogramme; Err. : erreur $L^2$ entre l'histogramme et le fit bi-gaussien.}
 \end{figure}
 
 \FloatBarrier
@@ -256,7 +257,7 @@ Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, corres
 \subfloat[Jour 1415]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_04_07_histo.png}}\ 
 \subfloat[Jour 1458]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_05_20_histo.png}}\ 
 \subfloat[Jour 1510]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_07_11_histo.png}}\
-\caption{\label{fig:histo_dcm_Chen} Histogrammes cliniques de la tumeur de \Chen. }
+\caption{\label{fig:histo_dcm_Chen} Histogrammes cliniques de la tumeur de \Chen. \\ $c,\sigma$ et $w$: valeur des paramètres des mélanges bi-gaussiens, \# : Nombre d'éléments dans l'histogramme, Err. : erreur $L^2$ entre l'histogramme et le fit bi-gaussien.}
 \end{figure}
 
 \clearpage
